# PlaylistArchitect

./: .gitignore  .spotify_cache  LICENSE  README.md  backup.py  helpers.py  main.py  new_playlist.py  pyproject.toml  remove_from_library.py  requirements.txt  retrieve_playlists.py  retrieve_playlists_2.py  retrieve_playlists_2b.py  retrieve_playlists_table.py  retrieve_playlists_table_bu.py  simple_test.py  spotify_auth.py  test.py  verify_playlists.py
src/auth/: __init__.py  spotify_auth.py
src/operations/: backup.py  new_playlist.py  remove_from_library.py  retrieve_playlists_table.py
src/playlistarchitect/: main.py
src/playlistarchitect/auth/: spotify_auth.py  spotify_client.py
src/playlistarchitect/config/: logging_config.json
src/playlistarchitect/operations/: backup.py  new_playlist.py  remove_from_library.py  retrieve_playlists_table copy.py  retrieve_playlists_table.py
src/playlistarchitect/utils/: constants.py  formatting_helpers.py  helpers.py  logging_config.json  logging_utils.py  new_playlist_helpers.py  playlist_helpers.py
