[tool.poetry]
name = "playlistarchitect"
version = "0.1.0"
description = "An app to handle Spotify playlists creatively."
authors = ["Damián Ferrero <damianferrero1@gmail.com>", "Eva Nikoghosyan <your.email@example.com>"]
readme = "README.md"
packages = [{include = "playlistarchitect", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.23"
python-dotenv = "^0.21"
requests = "^2.32"
tabulate = "^0.9"

[tool.poetry.scripts]
playlistarchitect = "playlistarchitect.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"